2011-05-30  Miloslav Trmač  <mitr@redhat.com>

	* NEWS: Update.

	* Makefile.am (DISTCLEANFILES, EXTRA_DIST): Fix (make distcheck).

	* Makefile.am (installcheck-local): Fix AUTOTEST_PATH.

	* Makefile.am (check-local): Remove, the test suite requires installed
	files.

	* tests/basic.at: Always use RSA keys, to make the (rpm -K) output
	predictable.

	* src/server.py (ServerConfiguration._add_defaults): Removee "encrypt"
	from default key usage, recent gnupg versions reject it with DSA.
	* config/server.conf (gnupg-key-usage): Update example.

	* src/utils.py (DaemonIDConfiguration._read_configuration): Treat empty
	user and group names same as undefined values.
	* tests/basic.at (Basic functionality): Don't try to change users,
	regardless of system-wide configuration.

	* src/bridge.py (SignRPMsReadRequestThread._real_run)
	(SignRPMsReadRequestThread.__read_one_request)
	(SignRPMsKojiThread._real_run)
	(SignRPMsKojiThread.__handle_one_request_rpm)
	(SignRPMsSendRequestThread._real_run)
	(SignRPMsSendRequestThread.__handle_one_rpm)
	(SignRPMsReadReplyThread._real_run)
	(SignRPMsReadReplyThread.__read_one_reply)
	(SignRPMsSendReplyThread._real_run)
	(SignRPMsSendReplyThread.__handle_one_rpm)
	* src/server.py (SignRPMsRequestThread._real_run)
	(SignRPMsRequestThread.__read_one_request)
	(SignRPMsSignerThread._real_run)
	(SignRPMsSignerThread.__handle_one_rpm)
	(SignRPMsReplyThread._real_run)
	(SignRPMsReplyThread.__handle_one_rpm): Remove detailed debugging log
	output.

	* NEWS
	* README: Update.

2011-05-26  Miloslav Trmač  <mitr@redhat.com>

	* src/sigul_setup_client: Stop when a client certificate already exists
	and tell the user what to do.

	* src/sigul_setup_client: Read NSS database password from
	~/.sigul/client.conf if it already exists.

	* src/sigul_setup_client: Explain the changing password terminology
	when doing a PKCS#12 export/import.

	* src/bridge.py (bridge_one_request)
	* src/double_tls.py (DoubleTLSClient.__child): Make reporting of